<resources>
    <string name="app_name">Guardian</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="phone">Phone</string>
    <string name="show_a_map_here">Show a map here</string>
    <string name="log_out">Log out</string>
    <string name="show_map">Show Map</string>
    <string name="map_key">AIzaSyA0jCCGKXsVfH3ijpClC41z3-tPHjgtoD4</string>
    <string name="yuhao_chen">Yuhao Chen</string>
    <string name="open" />
    <string name="close" />
    <string name="ambient_temperature">Ambient Temperature</string>
    <string name="label_temp">%1$.2f °C</string>
    <string name="heart_rates">Heart Rates</string>
    <string name="to_be_collected">To be collected</string>
    <string name="temp_warning">Temp Warning</string>
</resources>