<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HealthActivity">


    <TextView
        android:id="@+id/tempWarningTextView"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alice"
        android:text="@string/temp_warning"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alice"
        android:text="@string/heart_rates"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempWarningTextView" />

    <TextView
        android:id="@+id/tempTextView2"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alice"
        android:text="@string/to_be_collected"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/alice"
        android:text="@string/label_temp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/alice"
        android:text="@string/ambient_temperature"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>