<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    tools:context=".Register">

    <TextView
        android:id="@+id/app_name_register"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="86dp"
        android:fontFamily="@font/allerta"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/create_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="124dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textview_bottom"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/full_name_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="128dp"
        android:autofillHints="@string/full_name"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.450"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_phone" />

    <TextView
        android:id="@+id/create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/create_new_account"
        android:textColor="#212121"
        app:layout_constraintBottom_toTopOf="@+id/full_name_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.450"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Password"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.450"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pwd1" />

    <EditText
        android:id="@+id/register_pwd1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Enter Password"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textVisiblePassword"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.450"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register" />

    <TextView
        android:id="@+id/register_textview_bottom"
        android:layout_width="300dp"
        android:layout_height="18dp"
        android:layout_marginTop="13dp"
        android:text="@string/already_registered_login_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="109dp"
        android:autofillHints="Email"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/full_name_register" />

</androidx.constraintlayout.widget.ConstraintLayout>